# MonitoringBot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  rustfmt.toml
config/: .env.example
docker/: Dockerfile
src/: main.rs  settings.rs
