[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }

# Телеграм бот
teloxide = { version = "0.15.0", features = ["macros"] }

# БД
diesel = "2.2.10" # no backend features need to be enabled
diesel-async = { version = "0.5.2", features = ["postgres"] }

reqwest = { version = "0.12.15", features = ["json"] }
# TODO: Попробовать tracing вместо log
log = "0.4.27"
pretty_env_logger = "0.5"
dotenv = "0.15.0"
once_cell = "1.21.3"

[[bin]]
name = "telegrambot"
path = "src/bin/task.rs"

[dev-dependencies]
